# Switchyard

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  Switchyard.pc.in  acinclude.m4  autogen.sh  build_debs.sh.in  build_win32.bat  configure.ac  get_distro.sh  get_target.sh  switchyard.pro  switchyard.spec.in  switchyard5.pc.in  switchyard5.pro  switchyard5.spec.in
common/: Makefile.am  adv_astring.cpp  adv_astring.h  adv_packet.cpp  adv_packet.h  adv_reader.cpp  adv_reader.h  adv_server.cpp  adv_server.h  adv_source.cpp  adv_source.h  adv_tag.cpp  adv_tag.h  astring.cpp  cmdswitch.cpp  cmdswitch.h  config.h  gpio_server.cpp  gpio_server.h  link_common.sh  lwrp_clientconnection.cpp  lwrp_clientconnection.h  lwrp_server.cpp  lwrp_server.h  profile.cpp  profile.h  ringbuffer.cpp  ringbuffer.h  routing.cpp  routing.h  rtp.cpp  rtp.h
conf/: Makefile.am  switchyard.conf-example
debian/: Makefile.am  changelog.src  control.src  copyright  postinst  postrm  rules
debian/source/: Makefile.am
helpers/: Makefile.am  clean_common.sh  link_common.sh  link_common.sh~
sy/: Makefile.am  sy.pro  syadv_packet.cpp  syadv_packet.h  syadv_reader.cpp  syadv_reader.h  syadv_server.cpp  syadv_server.h  syadv_source.cpp  syadv_source.h  syadv_tag.cpp  syadv_tag.h  syastring.cpp  syastring.h  syclock.cpp  syclock.h  sycmdswitch.cpp  sycmdswitch.h  syconfig.h  sydestination.cpp  sydestination.h  syendpoint.cpp  syendpoint.h  syethmonitor.cpp  syethmonitor.h  sygpio_server.cpp  sygpio_server.h  sygpiobundle.cpp  sygpiobundle.h  sygpo.cpp  sygpo.h  syinterfaces.cpp  syinterfaces.h  sylogger.cpp  sylogger.h  sylwrp_client.cpp  sylwrp_client.h  sylwrp_clientconnection.cpp  sylwrp_clientconnection.h  sylwrp_server.cpp  (+19 more)
sy5/: Makefile.am  sy.pro  syadv_packet.cpp  syadv_packet.h  syadv_reader.cpp  syadv_server.cpp  syadv_server.h  syadv_source.cpp  syadv_tag.cpp  syadv_tag.h  syastring.h  syclock.h  sycmdswitch.cpp  sycmdswitch.h  sydestination.cpp  sydestination.h  syendpoint.cpp  syethmonitor.cpp  syethmonitor.h  sygpio_server.cpp  sygpio_server.h  sygpiobundle.cpp  sygpiobundle.h  sygpo.cpp  sygpo.h  syinterfaces.cpp  syinterfaces.h  sylwrp_client.cpp  sylwrp_client.h  sylwrp_clientconnection.h  sylwrp_server.cpp  sylwrp_server.h  symcastsocket.cpp  symcastsocket.h  synode.cpp  synode.h  syringbuffer.h  syrouting.cpp  syrouting.h  syrtp_server.cpp  (+6 more)
syd/: Makefile.am  astring.cpp  astring.h  clientconnection.cpp  clientconnection.h  config.h  lwpacket.cpp  lwpacket.h  lwrp.cpp  lwrp.h  lwsource.cpp  lwsource.h  lwtag.cpp  lwtag.h  routing.cpp  routing.h  rtp.cpp  rtp.h  rtp_callback.cpp  syd.cpp  syd.h
tests/: .gitignore  Makefile.am  codeinverttest.cpp  codeinverttest.h  playmeter.cpp  playmeter.h  rc.syd.in  rtp_callback.cpp  signalnotifiertest.cpp  signalnotifiertest.h  statuslight.cpp  statuslight.h  syastringtest.cpp  syastringtest.h  sycapture.cpp  sycapture.h  syd.cpp  syd.h  syethmonitortest.cpp  syethmonitortest.h  sygpiotest.cpp  sygpiotest.h  syinterfacestest.cpp  syinterfacestest.h  symetertest.cpp  symetertest.h  synodetest.cpp  synodetest.h  syplay.cpp  syplay.h  sytone.cpp  sytone.h  tests.pro
