## automake.am
##
## Makefile for AoIP common routines
##
## (C) Copyright 2014 Fred Gleason <fredg@paravelsystems.com>
##
##   All Rights Reserved.
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = adv_packet.cpp adv_packet.h\
             adv_reader.cpp adv_reader.h\
             adv_server.cpp adv_server.h\
             adv_source.cpp adv_source.h\
             adv_tag.cpp adv_tag.h\
             astring.cpp astring.h\
             cmdswitch.cpp cmdswitch.h\
             config.h\
             gpio_server.cpp gpio_server.h\
             link_common.sh\
             lwrp_clientconnection.cpp lwrp_clientconnection.h\
             lwrp_server.cpp lwrp_server.h\
             profile.cpp profile.h\
             ringbuffer.cpp ringbuffer.h\
             routing.cpp routing.h\
             rtp.cpp rtp.h

CLEANFILES = *~\
             *.idb\
             *ilk\
             *.obj\
             *.pdb\
             moc_*
MAINTAINERCLEANFILES = *~\
                       Makefile.in
